SMS iptables.conf
# This is configuration file for iptables firewall.
# Used by /etc/network/if-up.d/00-iptables

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Accept everything. FOR TEMP AND DEBUG USAGE
#-A INPUT -j ACCEPT

# Allow loopback
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Drop broadcast
-A INPUT -s 224.0.0.0/4      -j DROP
-A INPUT -d 224.0.0.0/4      -j DROP
-A INPUT -s 240.0.0.0/5      -j DROP
-A INPUT -d 240.0.0.0/5      -j DROP
-A INPUT -s 0.0.0.0/8        -j DROP
-A INPUT -d 0.0.0.0/8        -j DROP
-A INPUT -d 239.255.255.0/24 -j DROP
-A INPUT -d 255.255.255.255  -j DROP

# Allow established
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Allow secure icmp
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT

# Allow NTP and DNS
-A INPUT -p udp --sport 123 -j ACCEPT
-A INPUT -p udp --sport 53 -j ACCEPT

# Allow SSH
-A INPUT -s 10.128.64.0/24 -p tcp --dport 22 -j ACCEPT
-A INPUT -s 10.126.8.0/24 -p tcp --dport 22 -j ACCEPT

# Allow HTTP
-A INPUT -p tcp --dport 80 -j ACCEPT

# Allow Oracle
-A INPUT -s 10.128.64.0/24 -p tcp --dport 1521 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp --dport 1521 -j ACCEPT
-A INPUT -s 192.168.152.0/24 -p tcp --dport 1521 -j ACCEPT
-A INPUT -s 77.108.192.137 -p tcp --dport 1521 -j ACCEPT

# Allow Zabbix
-A INPUT -s 192.168.152.0/24 -p tcp --dport 10050:10051 -j ACCEPT

# Default reject rules
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited

COMMIT
